# ResearchPaper-bot

./: README.md  chatbot.py  client_chatbot.py  pyproject.toml  requirements.txt  runtime.txt  server.py  server_config.json
papers/ai_education/: papers_info.json
papers/ai_voice_generation/: papers_info.json
papers/behavioural_science/: papers_info.json
papers/graph_neural_networks/: papers_info.json
papers/iot_devices_security/: papers_info.json
papers/llm_reasoning/: papers_info.json
papers/voice_ai_generation/: papers_info.json
papers/web_development/: papers_info.json
