[project]
name = "mcp-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "fastmcp>=2.6.1",
    "google-genai>=1.18.0",
    "google-generativeai>=0.8.5",
    "mcp>=1.9.1",
    "python-dotenv>=1.1.0",
]
